--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,11 @@ add_executable(Linear11Trans Linear11Trans.cpp)
 add_executable(Linear16Trans Linear16Trans.cpp)
 
 add_executable(ByteAcc checksum_byteacc.cpp)
+target_link_libraries(ByteAcc pthread)
 
 add_executable(RandomMac RandomMac.cpp)
+
+add_executable(Crc8 Crc8.c)
 
 #install(TARGETS Hex2Ascii DESTINATION ${CMAKE_INSTALL_BINDIR})
 #install(TARGETS Ascii2Hex DESTINATION ${CMAKE_INSTALL_BINDIR})
